# cpp-task-manager

./: .gitignore  CMakeLists.txt  README.md  system_monitor.cpp  system_monitor.h
agent/: CMakeLists.txt  main.cpp  system_monitor.cpp  system_monitor.hpp
server/: package-lock.json  package.json  server.js
src/: Dashboard.h  TaskManager.h  dashboard.cpp  dashboard.hpp  logger.cpp  main.cpp  plugin.hpp  system.cpp  system.hpp  system_monitor.cpp  system_monitor.hpp  task.cpp  task.hpp  task_manager.cpp  task_manager.hpp  ui.cpp  ui.hpp
src/core/: config.hpp  logger.cpp  logger.hpp
src/network/: server.cpp  server.hpp
src/plugins/: cpu_plugin.cpp  cpu_plugin.hpp  plugin.hpp
src/system/: system_monitor.cpp  system_monitor.hpp
src/task/: task_manager.cpp  task_manager.hpp
src/ui/: ui.cpp  ui.hpp
web/: index.html  package-lock.json  package.json
web/src/: Dashboard.jsx
